--- a/myApp/src/pages/activity/subpages/notification/notification.scss
+++ b/myApp/src/pages/activity/subpages/notification/notification.scss
@@ -8,10 +8,11 @@ ion-list {
   ion-label {
     div {
       text-transform: none;
-      font-size: 0.8em;
+      font-size: 1.1em;
       padding: 1em 0;
       white-space: normal;
       text-align: justify;
+      background-color: whitesmoke;
     }
   }
   ion-icon  {
@@ -25,4 +26,5 @@ ion-list {
       font-weight: bold;
     }
   }
+
 }
