--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -27,6 +27,7 @@ $colors: (
   primary:    #387ef5,
   secondary:  #32db64,
   danger:     #f53d3d,
+  option: #f5f5f5,
   light:      #f4f4f4,
   dark:       #222,
   twitter:(
