--- a/myApp/src/pages/signup-page/signup-page.scss
+++ b/myApp/src/pages/signup-page/signup-page.scss
@@ -3,7 +3,7 @@
   signup-page {
 
     ion-content {
-      background-color: map-get($colors, secondary);
+      background-color: map-get($colors, login);
     }
 
     scroll-content {
