--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -30,6 +30,7 @@ $colors: (
   option: #f5f5f5,
   light:      #f4f4f4,
   dark:       #222,
+  login: #849BB3,
   twitter:(
     base: #2B547E,
     contrast: #ffffff
