--- a/myApp/src/pages/activity/subpages/pastaccident/pastaccident.scss
+++ b/myApp/src/pages/activity/subpages/pastaccident/pastaccident.scss
@@ -1,5 +1,11 @@
 
 ion-card-content{
-  font-size: 1.20em;
+  font-size: 1.2em;
+  text-align: justify;
+ 
+}
+
+p{
+  font-size: 1.4em;
   text-align: justify;
 }
